# tasks

./: .clang-format  CMakeLists.txt
attic/: ask.txt  ask2.txt  protothread.h  protothread_gen.h
src/: get_cpu_count.c  get_cpu_count.h  main.c  threadlet.c  threadlet.h
